<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#181825"
    tools:context=".TermsAndConditionsActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonAgree"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#1E1E2D"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:padding="8dp"
                android:fontFamily="@font/lexendregular"
                android:text="@string/effectivedate" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:padding="8dp"
                android:fontFamily="@font/lexendregular"
                android:text="@string/acceptanceofterms" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:padding="8dp"
                android:fontFamily="@font/lexendregular"
                android:text="@string/privacypolicy" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:padding="8dp"
                android:fontFamily="@font/lexendregular"
                android:text="@string/acccesstosms" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:padding="8dp"
                android:fontFamily="@font/lexendregular"
                android:text="@string/license" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:padding="8dp"

                android:fontFamily="@font/lexendregular"
                android:text="@string/userobli" />

            <!-- Continue splitting the text into separate TextView elements similarly -->

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAgree"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/i_agree"
        app:cornerRadius="8dp"
        android:fontFamily="@font/lexendregular"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
